[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullets/BaseBullet.gd" type="Script" id=1]
[ext_resource path="res://onlyObjects_rotated.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6.73155, 3.98161 )

[node name="Bullet" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
speed = 300
damage = 10
lifetime = 1.0

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 138.125, 20, 15.875, 12.125 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.115982, -1.15982 )
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]


